Fixed broken UI when no data available

--- a/app/assets/stylesheets/module/_edu-details.scss
+++ b/app/assets/stylesheets/module/_edu-details.scss
@@ -113,6 +113,7 @@
   @extend %overflow-hidden; 
   @extend %no-padding-right;
   @extend %float-left;
+  @extend %display-flex;
 
   p {
     margin-top: rem(3);
